# CompetitiveProgramming

./: .gitignore  CP.sublime-build  DynamicProgramming.md  README.md  gcc_template.cpp  gcc_template_minimal.cpp  template.cpp  template.java
algorithms/cpp/2D_Geometry/: CMakeLists.txt  angle_2d.cpp  are_intersect.cpp  are_parallel_line.cpp  are_same_line.cpp  closest_pair_DnC.cpp  closest_pair_sweep_line.cpp  convex_hull_amc.cpp  convex_hull_grahams.cpp  dist_2d.cpp  intersect_area.cpp  intersection_point.cpp  is_point_inside.cpp  points_to_line.cpp  polygon_area.cpp  polygon_perimeter.cpp  rectangle_area.cpp  rotate_2d.cpp  struct.cpp  triangle_area.cpp  utility_methods.cpp
algorithms/cpp/Articulation_Point_Bridge/: CMakeLists.txt  SPOJ_SUBMERGE.cpp  UVA_10199.cpp  UVA_315.cpp  UVA_610.cpp  UVA_796.cpp  input.txt
algorithms/cpp/BFS/: CMakeLists.txt  LOJ_A_Toy_Company.cpp  LOJ_Back_to_Underworld.cpp  LOJ_Best_Picnic_Ever.cpp  LOJ_Commandos.cpp  LOJ_Corrupted_Friendship.cpp  LOJ_Gathering_Food.cpp  LOJ_Going_Together.cpp  LOJ_Guilty_Prince.cpp  LOJ_Jane_and_the_Frost_Giants.cpp  LOJ_Number_Transformation.cpp  LOJ_Power_Puff_Girls.cpp  LOJ_Rider.cpp  LOJ_The_Crystal_Maze.cpp  SPOJ_AKBAR.cpp  SPOJ_NAKANJ.cpp  SPOJ_RIOI_2_3.cpp  SPOJ_WATER.cpp  bfs.cpp  input.txt  main.cpp
algorithms/cpp/BinaryExponentiation/: CMakeLists.txt  SPOJ_LASTDIG.cpp  SPOJ_LOCKER.cpp  SPOJ_ZSUM.cpp  UVA_11029_Leading_Trailing.cpp  UVA_1230_MODEX.cpp  UVA_374_Big_Mod.cpp  bigMod.cpp
algorithms/cpp/BinarySearchTree/: CMakeLists.txt  binary_search_tree.cpp  binary_tree_to_bst.cpp  bst_problems_set_1.cpp  check_balanced_bst.cpp  count_nodes_given_range.cpp  floor_ceiling_of_bst.cpp
algorithms/cpp/BinaryTree/: CMakeLists.txt  binary_tree_build.cpp  binary_tree_inorder_successor.cpp  binary_tree_problem_set_1.cpp  binary_tree_problem_set_2.cpp  binary_tree_traversal.cpp  boundary_nodes.cpp  check_balanced.cpp  check_identical.cpp  check_isomorphic.cpp  diameter_of_binary_tree.cpp  left_right_top_bottom_view.cpp  left_right_view.cpp  level_order_traversal.cpp  lowest_common_ancestor.cpp  maximum_level_sum.cpp  vertical_order_traversal.cpp
algorithms/cpp/DFS/: CMakeLists.txt  CODECHEF_GERALD07.cpp  LEETCODE_1254.cpp  LEETCODE_797.cpp  LEETCODE_841.cpp  SPOJ_ABCPATH.cpp  SPOJ_ADASEA.cpp  SPOJ_AMR10J.cpp  SPOJ_CCOMPS.cpp  SPOJ_EAGLE1.cpp  SPOJ_KOZE.cpp  SPOJ_MAKEMAZE.cpp  SPOJ_RIOI_2_3.cpp  input.txt
algorithms/cpp/DSU/: CF_Roads_not_only_in_Berland.cpp  CMakeLists.txt  LEETCODE_1254_Number_of_Closed_Islands.cpp  LEETCODE_130_Surrounded_Regions.cpp  LEETCODE_200_Number_of_Islands.cpp  LEETCODE_785_Is_Graph_Bipartite.cpp  LEETCODE_827_Making_A_Large_Island.cpp  SPOJ_CLFLARR.cpp  dsu_distance_to_root.cpp  dsu_naive.cpp  dsu_path_compression.cpp  dsu_union_rank.cpp  dsu_union_rank_using_map.cpp
algorithms/cpp/Dijkstra/: CF_Dijkstra.cpp  CF_Jzzhu_and_Cities.cpp  CF_Shortest_Path.cpp  CF_The_Classic_Problem.cpp  CMakeLists.txt  SPOJ_ADATRIP.cpp  SPOJ_CCHESS.cpp  SPOJ_DELIVER.cpp  SPOJ_SHPATH.cpp  UVA_10278_Fire_Station.cpp  UVA_10342_Always_Late.cpp  UVA_10603_Fill.cpp  UVA_10801_Lift_Hopping.cpp  UVA_10986_Sending_Email.cpp  UVA_11367_Full_Tank.cpp  UVA_11377_Airport_Setup.cpp  UVA_11492_Babel.cpp  UVA_11833_Route_Change.cpp  UVA_12047_Highest_Paid_Toll.cpp  UVA_12144_Almost_Shortest_Path.cpp  UVA_929_Number_Maze.cpp  dijkstra.cpp  find_all_shortest_paths.cpp  input.txt  main.cpp  output.txt  second_shortest_path.cpp  second_shortest_path_2.cpp
algorithms/cpp/DynamicProgramming/: CMakeLists.txt  coin_change.cpp  count_palindrome_substring.cpp  edit_distance.cpp  knapsack_01.cpp  lcs.cpp  lis.cpp  lis_dp.cpp  lis_nlgn.cpp  maximum_sum_1d_kadane.cpp  maximum_sum_2d.cpp  maximum_sum_2d_kadane.cpp  mcm.cpp  palindrome_partition.cpp  rmq.cpp  segment_tree.cpp  subset_sum.cpp  tsp.cpp
algorithms/cpp/FenwickTree/: CMakeLists.txt  LOJ_1112_Curious_Robin_Hood.cpp  LOJ_1266_Points_in_Rectangle.cpp  SPOJ_CRAYON.cpp  SPOJ_DCEPC206.cpp  SPOJ_DCEPC705.cpp  SPOJ_DQUERY.cpp  SPOJ_MATSUM.cpp  SPOJ_SGIFT.cpp  SPOJ_SUMSUM.cpp  SPOJ_TPGA.cpp  SPOJ_TULIPNUM.cpp  SPOJ_ZIGZAG2.cpp  UVA_12086_Potentiometers.cpp  fenwick_tree_0_based.cpp  fenwick_tree_1_based.cpp  fenwick_tree_rmq.cpp  input.txt  range_update_point_query.cpp  range_update_range_query.cpp
algorithms/cpp/Floyd-Warshall/: CMakeLists.txt  SPOJ_SOCIALNE.cpp  UVA_10048_Audiophobia.cpp  UVA_10171_Meeting_Prof_Miguel.cpp  UVA_10724_Road_Construction.cpp  UVA_11463_Commandos.cpp  UVA_117_The_Postal_Worker_Rings_Once.cpp  UVA_1198_The_Geodetic_Set_Problem.cpp  UVA_821_Page_Hopping.cpp  input.txt  main.cpp
algorithms/cpp/Graph/: CMakeLists.txt  articulation_point.cpp  bellman_ford.cpp  bfs.cpp  bidirectional_search.cpp  bipartite_check.cpp  dfs.cpp  dijkstra.cpp  input.txt  kahns_algorithm.cpp  kruskal.cpp  minimax.cpp  prim.cpp  second_best_spanning_tree.cpp  tarjan.cpp  topological_sort.cpp
algorithms/cpp/KMP/: 11019_Matrix_Matcher.cpp  CF_Anthem_of_Berland.cpp  CF_MUH_and_Cube_Walls.cpp  CMakeLists.txt  SPOJ_ADAPET.cpp  SPOJ_NAJPF.cpp  UVA_12467_Secret_word.cpp  UVA_12604_Caesar_Cipher.cpp  UVA_455_Periodic_String.cpp  input.txt  kmp_algo.cpp
algorithms/cpp/Kruskal/: CMakeLists.txt  LEETCODE_1584_Min_Cost_to_Connect_All_Points.cpp  SPOJ_MARYBMW.cpp  UVA_11631_Dark_roads.cpp  UVA_11710_Expensive_Subway.cpp  UVA_12176_Bring_Your_Own_Horse.cpp  input.txt  kruskal.cpp  main.cpp  output.txt
algorithms/cpp/LinkedList/: CMakeLists.txt  circular_singly_linked_list.cpp  detect_cycle_loop.cpp  linked_list_problem_set_1.cpp  merge_sort_singly_linked_list.cpp  merge_sorted_linked_list.cpp  middle_element.cpp  nth_node_from_end.cpp  palindrome_check.cpp  remove_cycle_loop.cpp  remove_duplicates_from_sorted.cpp  reverse_in_groups.cpp  reverse_singly_linked_list.cpp  rotate_linked_list.cpp  singly_linked_list.cpp
algorithms/cpp/Longest_Increasing_Subsequence/: CF_LCIS.cpp  CF_Tourist.cpp  CMakeLists.txt  LOJ_Wavio_Sequence.cpp  SPOJ_HMLIS.cpp  input.txt  lis_count.cpp  lis_nlgn.cpp
algorithms/cpp/NumberTheory/: CMakeLists.txt  eular_number.cpp  pascal_triangle.cpp  (+6 more)
(+901 files in other folders)
