cmake_minimum_required(VERSION 3.13)
project(2D_Geometry)

set(CMAKE_CXX_STANDARD 14)
add_executable(angle_2d angle_2d.cpp)
add_executable(are_intersect are_intersect.cpp)
add_executable(dist_2d dist_2d.cpp)
add_executable(are_same_line are_same_line.cpp)
add_executable(closest_pair_DnC closest_pair_DnC.cpp)
add_executable(convex_hull_amc convex_hull_amc.cpp)
add_executable(closest_pair_sweep_line closest_pair_sweep_line.cpp)
add_executable(convex_hull_grahams convex_hull_grahams.cpp)
add_executable(intersect_area intersect_area.cpp)
add_executable(intersection_point intersection_point.cpp)
add_executable(is_point_inside is_point_inside.cpp)
add_executable(polygon_area polygon_area.cpp)
add_executable(polygon_perimeter polygon_perimeter.cpp)
add_executable(rectangle_area rectangle_area.cpp)
add_executable(rotate_2d rotate_2d.cpp)
add_executable(struct struct.cpp)
add_executable(triangle_area triangle_area.cpp)
add_executable(utility_methods utility_methods.cpp)