cmake_minimum_required(VERSION 3.17)
project(Articulation_Point_Bridge)

set(CMAKE_CXX_STANDARD 14)

add_executable(Articulation_Point_Bridge main.cpp)
add_executable(articulation_point_bridge articulation_point_bridge.cpp)
add_executable(UVA_315 UVA_315.cpp)
add_executable(UVA_796 UVA_796.cpp)
add_executable(UVA_610 UVA_610.cpp)