cmake_minimum_required(VERSION 3.17)
project(BFS)

set(CMAKE_CXX_STANDARD 14)

add_executable(bfs bfs.cpp)
add_executable(SPOJ_AKBAR SPOJ_AKBAR.cpp)
add_executable(SPOJ_WATER SPOJ_WATER.cpp)
add_executable(SPOJ_NAKANJ SPOJ_NAKANJ.cpp)
add_executable(SPOJ_MICEMAZE SPOJ_MICEMAZE.cpp)
add_executable(LOJ_Back_to_Underworld LOJ_Back_to_Underworld.cpp)
add_executable(LOJ_Guilty_Prince LOJ_Guilty_Prince.cpp)
add_executable(LOJ_A_Toy_Company LOJ_A_Toy_Company.cpp)
add_executable(LOJ_Gathering_Food LOJ_Gathering_Food.cpp)
add_executable(LOJ_Best_Picnic_Ever LOJ_Best_Picnic_Ever.cpp)
add_executable(LOJ_Number_Transformation LOJ_Number_Transformation.cpp)
add_executable(LOJ_Power_Puff_Girls LOJ_Power_Puff_Girls.cpp)
add_executable(LOJ_The_Crystal_Maze LOJ_The_Crystal_Maze.cpp)
add_executable(LOJ_Rider LOJ_Rider.cpp)
add_executable(LOJ_Going_Together LOJ_Going_Together.cpp)
add_executable(LOJ_Commandos LOJ_Commandos.cpp)
add_executable(LOJ_Jane_and_the_Frost_Giants LOJ_Jane_and_the_Frost_Giants.cpp)
add_executable(LOJ_Corrupted_Friendship LOJ_Corrupted_Friendship.cpp)
add_executable(SPOJ_RIOI_2_3 SPOJ_RIOI_2_3.cpp)
add_executable(CF_Shortest_Path CF_Shortest_Path.cpp)
add_executable(main main.cpp)