cmake_minimum_required(VERSION 3.17)
project(BinaryExponentiation)

set(CMAKE_CXX_STANDARD 14)

add_executable(bigMod bigMod.cpp)
add_executable(UVA_1230_MODEX UVA_1230_MODEX.cpp)
add_executable(UVA_374_Big_Mod UVA_374_Big_Mod.cpp)
add_executable(UVA_11029_Leading_Trailing UVA_11029_Leading_Trailing.cpp)
add_executable(SPOJ_LASTDIG SPOJ_LASTDIG.cpp)
add_executable(SPOJ_ZSUM SPOJ_ZSUM.cpp)