cmake_minimum_required(VERSION 3.13)
project(BinaryTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(binary_tree_traversal binary_tree_traversal.cpp)
add_executable(binary_tree_build binary_tree_build.cpp)
add_executable(binary_tree_inorder_successor binary_tree_inorder_successor.cpp)
add_executable(binary_tree_problem_set_1 binary_tree_problem_set_1.cpp)
add_executable(level_order_traversal level_order_traversal.cpp)
add_executable(boundary_nodes boundary_nodes.cpp)
add_executable(lowest_common_ancestor lowest_common_ancestor.cpp)
add_executable(left_right_view left_right_view.cpp)
add_executable(maximum_level_sum maximum_level_sum.cpp)
add_executable(check_identical_trees check_identical.cpp)
add_executable(binary_tree_problem_set_2 binary_tree_problem_set_2.cpp)
add_executable(check_isomorphic check_isomorphic.cpp)
add_executable(check_balanced check_balanced.cpp)
add_executable(diameter_of_binary_tree diameter_of_binary_tree.cpp)