cmake_minimum_required(VERSION 3.17)
project(DFS)

set(CMAKE_CXX_STANDARD 14)

add_executable(DFS main.cpp)
add_executable(CF_Kefa_and_Park CF_Kefa_and_Park.cpp)
add_executable(SPOJ_EAGLE1 SPOJ_EAGLE1.cpp)
add_executable(SPOJ_ABCPATH SPOJ_ABCPATH.cpp)
add_executable(UVA_657_The_die_is_cast UVA_657_The_die_is_cast.cpp)
add_executable(SPOJ_RIOI_2_3 SPOJ_RIOI_2_3.cpp)
add_executable(SPOJ_GHOSTS SPOJ_GHOSTS.cpp)
add_executable(CAC CAC.cpp)
add_executable(SPOJ_AMR10J SPOJ_AMR10J.cpp)
add_executable(SPOJ_ADASEA SPOJ_ADASEA.cpp)
add_executable(SPOJ_KOZE SPOJ_KOZE.cpp)
add_executable(SPOJ_MAKEMAZE SPOJ_MAKEMAZE.cpp)
add_executable(LEETCODE_797 LEETCODE_797.cpp)
add_executable(LEETCODE_841 LEETCODE_841.cpp)
add_executable(LEETCODE_1254 LEETCODE_1254.cpp)
add_executable(SPOJ_CCOMPS SPOJ_CCOMPS.cpp)
add_executable(CODECHEF_GERALD07 CODECHEF_GERALD07.cpp)