cmake_minimum_required(VERSION 3.19)
project(Dijkstra)

set(CMAKE_CXX_STANDARD 14)

add_executable(Dijkstra main.cpp)
add_executable(dijkstra dijkstra.cpp)
add_executable(CF_Dijkstra CF_Dijkstra.cpp)
add_executable(CF_The_Classic_Problem CF_The_Classic_Problem.cpp)
add_executable(CF_Shortest_Path CF_Shortest_Path.cpp)
add_executable(CF_Jzzhu_and_Cities CF_Jzzhu_and_Cities.cpp)
add_executable(SPOJ_SHPATH SPOJ_SHPATH.cpp)
add_executable(SPOJ_ADATRIP SPOJ_ADATRIP.cpp)