cmake_minimum_required(VERSION 3.19)
project(Dijkstra)

set(CMAKE_CXX_STANDARD 14)

add_executable(dijkstra dijkstra.cpp)
add_executable(CF_Dijkstra CF_Dijkstra.cpp)
add_executable(CF_The_Classic_Problem CF_The_Classic_Problem.cpp)
add_executable(CF_Shortest_Path CF_Shortest_Path.cpp)
add_executable(CF_Jzzhu_and_Cities CF_Jzzhu_and_Cities.cpp)
add_executable(SPOJ_SHPATH SPOJ_SHPATH.cpp)
add_executable(SPOJ_ADATRIP SPOJ_ADATRIP.cpp)
add_executable(UVA_929_Number_Maze UVA_929_Number_Maze.cpp)
add_executable(UVA_10603_Fill UVA_10603_Fill.cpp)
add_executable(UVA_10801_Lift_Hopping UVA_10801_Lift_Hopping.cpp)
add_executable(UVA_10278_Fire_Station UVA_10278_Fire_Station.cpp)
add_executable(UVA_10986_Sending_Email UVA_10986_Sending_Email.cpp)
add_executable(UVA_11367_Full_Tank UVA_11367_Full_Tank.cpp)
add_executable(UVA_11377_Airport_Setup UVA_11377_Airport_Setup.cpp)
add_executable(UVA_11833_Route_Change UVA_11833_Route_Change.cpp)
add_executable(SPOJ_CCHESS SPOJ_CCHESS.cpp)
add_executable(SPOJ_DELIVER SPOJ_DELIVER.cpp)
add_executable(UVA_12047_Highest_Paid_Toll UVA_12047_Highest_Paid_Toll.cpp)
add_executable(UVA_10342_Always_Late UVA_10342_Always_Late.cpp)
add_executable(main main.cpp)
add_executable(second_shortest_path second_shortest_path.cpp)
add_executable(second_shortest_path_2 second_shortest_path_2.cpp)
add_executable(all_possible_shortest_paths find_all_shortest_paths.cpp)
add_executable(UVA_12144_Almost_Shortest_Path UVA_12144_Almost_Shortest_Path.cpp)