cmake_minimum_required(VERSION 3.13)
project(DynamicProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(coin_change coin_change.cpp)
add_executable(count_palindrome_substring count_palindrome_substring.cpp)
add_executable(edit_distance edit_distance.cpp)
add_executable(knapsack_01 knapsack_01.cpp)
add_executable(lcs lcs.cpp)
add_executable(lis lis.cpp)
add_executable(lis_nlgn lis_nlgn.cpp)