cmake_minimum_required(VERSION 3.19)
project(FenwickTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(FenwickTree main.cpp)
add_executable(fenwick_tree_0_based fenwick_tree_0_based.cpp)
add_executable(fenwick_tree_1_based fenwick_tree_1_based.cpp)
add_executable(fenwick_tree_rmq fenwick_tree_rmq.cpp)
add_executable(UVA_12086_Potentiometers UVA_12086_Potentiometers.cpp)
add_executable(LOJ_1112_Curious_Robin_Hood LOJ_1112_Curious_Robin_Hood.cpp)
add_executable(LOJ_1266_Points_in_Rectangle LOJ_1266_Points_in_Rectangle.cpp)
add_executable(SPOJ_MATSUM SPOJ_MATSUM.cpp)
add_executable(range_update_point_query range_update_point_query.cpp)
add_executable(range_update_range_query range_update_range_query.cpp)
add_executable(SPOJ_DQUERY SPOJ_DQUERY.cpp)
add_executable(SPOJ_TULIPNUM SPOJ_TULIPNUM.cpp)
add_executable(SPOJ_SUMSUM SPOJ_SUMSUM.cpp)
add_executable(SPOJ_SGIFT SPOJ_SGIFT.cpp)
add_executable(SPOJ_ZIGZAG2 SPOJ_ZIGZAG2.cpp)
add_executable(SPOJ_TPGA SPOJ_TPGA.cpp)
add_executable(SPOJ_CRAYON SPOJ_CRAYON.cpp)
add_executable(SPOJ_DCEPC705 SPOJ_DCEPC705.cpp)
add_executable(SPOJ_DCEPC206 SPOJ_DCEPC206.cpp)