cmake_minimum_required(VERSION 3.17)
project(KMP)

set(CMAKE_CXX_STANDARD 14)

add_executable(kmp_algo kmp_algo.cpp)
add_executable(11019_Matrix_Matcher 11019_Matrix_Matcher.cpp)
add_executable(UVA_455_Periodic_String UVA_455_Periodic_String.cpp)
add_executable(CF_Anthem_of_Berland CF_Anthem_of_Berland.cpp)
add_executable(CF_MUH_and_Cube_Walls CF_MUH_and_Cube_Walls.cpp)
add_executable(SPOJ_NAJPF SPOJ_NAJPF.cpp)
add_executable(UVA_12467_Secret_word UVA_12467_Secret_word.cpp)