cmake_minimum_required(VERSION 3.13)
project(LinkedList)

set(CMAKE_CXX_STANDARD 14)

add_executable(singly_linked_list singly_linked_list.cpp)
add_executable(linked_list_problem_set_1 linked_list_problem_set_1.cpp)
add_executable(palindrome_check palindrome_check.cpp)
add_executable(circular_singly_linked_list circular_singly_linked_list.cpp)
add_executable(middle_element middle_element.cpp)
add_executable(merge_sorted_linked_list merge_sorted_linked_list.cpp)
add_executable(remove_duplicates remove_duplicates_from_sorted.cpp)
add_executable(reverse_singly_linked_list reverse_singly_linked_list.cpp)
add_executable(reverse_in_groups reverse_in_groups.cpp)
add_executable(detect_cycle_loop detect_cycle_loop.cpp)
add_executable(remove_cycle_loop remove_cycle_loop.cpp)
add_executable(merge_sort_singly_linked_list merge_sort_singly_linked_list.cpp)
add_executable(nth_node_from_end nth_node_from_end.cpp)
add_executable(rotate_linked_list rotate_linked_list.cpp)