cmake_minimum_required(VERSION 3.17)
project(Longest_Increasing_Subsequence)

set(CMAKE_CXX_STANDARD 14)

add_executable(Longest_Increasing_Subsequence main.cpp)
add_executable(lis_dp lis_dp.cpp)
add_executable(lis_nlgn lis_nlgn.cpp)
add_executable(CF_LCIS CF_LCIS.cpp)
add_executable(CF_Tourist CF_Tourist.cpp)
add_executable(SPOJ_HMLIS SPOJ_HMLIS.cpp)
add_executable(LOJ_Wavio_Sequence LOJ_Wavio_Sequence.cpp)
add_executable(lis_count lis_count.cpp)