cmake_minimum_required(VERSION 3.17)
project(PrimeNumbers)

set(CMAKE_CXX_STANDARD 14)

add_executable(PrimeNumbers sieve.cpp)
add_executable(SPOJ_TDPRIMES SPOJ_TDPRIMES.cpp)
add_executable(SPOJ_HS08PAUL SPOJ_HS08PAUL.cpp)
add_executable(SPOJ_VECTAR8 SPOJ_VECTAR8.cpp)
add_executable(SPOJ_PTRI SPOJ_PTRI.cpp)
add_executable(CF_Almost_Prime CF_Almost_Prime.cpp)
add_executable(B_Sherlock_and_his_girlfriend B_Sherlock_and_his_girlfriend.cpp)
add_executable(COMDIV SPOJ_COMDIV.cpp)
add_executable(DIVSUM SPOJ_DIVSUM.cpp)
add_executable(SPOJ_DIVSUM2 SPOJ_DIVSUM2.cpp)
add_executable(pre_calculate_sigma pre_calculate_sigma.cpp)
add_executable(pre_calculate_tau pre_calculate_tau.cpp)
add_executable(pre_calculate_phi pre_calculate_phi.cpp)
add_executable(bitwise_sieve bitwise_sieve.cpp)