cmake_minimum_required(VERSION 3.13)
project(SegmentTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(segment_tree_rsq_lazy segment_tree_rsq_lazy.cpp)
add_executable(segment_tree_rmq_lazy segment_tree_rmq_lazy.cpp)
add_executable(segment_tree_concise segment_tree_concise.cpp)
add_executable(D.XeniaandBitOperations "problems/D. Xenia and Bit Operations.cpp")
add_executable(Multiplesof3 "problems/MULTQ3 - Multiples of 3.cpp")
add_executable(FREQUENT-Frequentvalues "problems/FREQUENT - Frequent values.cpp")
add_executable(GSS1 "problems/GSS1 - Can you answer these queries I.cpp")

add_executable(GSS3 "problems/GSS3 - Can you answer these queries III.cpp")
add_executable(C.CircularRMQ "problems/C. Circular RMQ.cpp")
add_executable(12532IntervalProduct "problems/UVA 12532 Interval Product.cpp")
add_executable(UVA1232-SKYLINE "problems/UVA 1232 - SKYLINE.cpp")
add_executable(ANDROUND "problems/ANDROUND - AND Rounds.cpp")
add_executable(RPLN "problems/RPLN - Negative Score.cpp")
add_executable(POSTERS "problems/POSTERS - Election Posters.cpp")
add_executable(HISTOGRA "problems/HISTOGRA - Largest Rectangle in a Histogram.cpp")
add_executable(persistent_segment_tree persistent_segment_tree.cpp)
add_executable(segment_tree_rsq segment_tree_rsq.cpp)
add_executable(segment_tree_rmq segment_tree_rmq.cpp)
add_executable(segment_tree_rmq_frequency segment_tree_rmq_frequency.cpp)
add_executable(segment_tree_kth_zero segment_tree_kth_zero.cpp)
add_executable(segment_tree_save_entire_subarray segment_tree_save_entire_subarray.cpp)
add_executable(segment_tree_rsq_2d segment_tree_rsq_2d.cpp)