cmake_minimum_required(VERSION 3.13)
project(SegmentTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(segment_tree_rsq_lazy segment_tree_rsq_lazy.cpp)
add_executable(segment_tree_rmq_lazy segment_tree_rmq_lazy.cpp)
add_executable(segment_tree_concise segment_tree_concise.cpp)
add_executable(persistent_segment_tree persistent_segment_tree.cpp)
add_executable(segment_tree_rsq segment_tree_rsq.cpp)
add_executable(segment_tree_rmq segment_tree_rmq.cpp)
add_executable(segment_tree_rmq_frequency segment_tree_rmq_frequency.cpp)
add_executable(segment_tree_kth_zero segment_tree_kth_zero.cpp)
add_executable(segment_tree_save_entire_subarray segment_tree_save_entire_subarray.cpp)
add_executable(segment_tree_rsq_2d segment_tree_rsq_2d.cpp)