cmake_minimum_required(VERSION 3.13)
project(SegmentTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(segment_tree_rsq_lazy segment_tree_rsq_lazy.cpp)
add_executable(segment_tree_rmq_lazy segment_tree_rmq_lazy.cpp)
add_executable(segment_tree_concise segment_tree_concise.cpp)
add_executable(persistent_segment_tree persistent_segment_tree_rsq.cpp)
add_executable(segment_tree_rsq segment_tree_rsq.cpp)
add_executable(segment_tree_rmq segment_tree_rmq.cpp)
add_executable(segment_tree_rmq_frequency segment_tree_rmq_frequency.cpp)
add_executable(segment_tree_kth_zero segment_tree_kth_zero.cpp)
add_executable(segment_tree_save_entire_subarray segment_tree_save_entire_subarray.cpp)
add_executable(segment_tree_rsq_2d segment_tree_rsq_2d.cpp)
add_executable(segment_tree_rmq_occurance segment_tree_rmq_occurance.cpp)
add_executable(segment_tree_gcd segment_tree_gcd.cpp)
add_executable(segment_tree_array_prefix_given_amount segment_tree_array_prefix_given_amount.cpp)
add_executable(maximum_subarray_sum_given_range maximum_subarray_sum_given_range.cpp)
add_executable(merge_sort_tree_find_smallest_number_greater_x merge_sort_tree_find_smallest_number_greater_than_x.cpp)

add_executable(SPOJ_PSEGTREE SPOJ_PSEGTREE.cpp)
add_executable(CF_Xenia_and_Bit_Operations CF_Xenia_and_Bit_Operations.cpp)
add_executable(SPOJ_GSS3 SPOJ_GSS3.cpp)
add_executable(SPOJ_KQUERY SPOJ_KQUERY.cpp)
add_executable(UVA_11402 UVA_11402.cpp)
add_executable(segment_tree_zero_count segment_tree_zero_count.cpp)
add_executable(CF_Distinct_Characters_Queries CF_Distinct_Characters_Queries.cpp)
add_executable(CF_Circular_RMQ CF_Circular_RMQ.cpp)
add_executable(CF_Lucky_Array CF_Lucky_Array.cpp)
add_executable(CF_The_Child_and_Sequence CF_The_Child_and_Sequence.cpp)
add_executable(CF_DZY_Loves_Fibonacci_Numbers CF_DZY_Loves_Fibonacci_Numbers.cpp)