cmake_minimum_required(VERSION 3.19)
project(Stack)

set(CMAKE_CXX_STANDARD 14)

add_executable(stack_using_linked_list stack_using_linked_list.cpp)
add_executable(stack_using_queue stack_using_queue_method_1.cpp)
add_executable(stack_using_queue_method_2 stack_using_queue_method_2.cpp)
add_executable(stack_using_queue_method_3 stack_using_queue_method_3.cpp)
add_executable(infix_to_postfix infix_to_postfix.cpp)
add_executable(min_stack_method_1 min_stack_method_1.cpp)
add_executable(min_stack_method_2 min_stack_method_2.cpp)
add_executable(prefix_to_infix prefix_to_infix.cpp)
add_executable(prefix_to_postfix prefix_to_postfix.cpp)
add_executable(postfix_to_prefix postfix_to_prefix.cpp)
add_executable(postfix_to_infix postfix_to_infix.cpp)
add_executable(infix_to_prefix infix_to_prefix.cpp)
add_executable(next_greater_element next_greater_element.cpp)
add_executable(next_greater_frequency next_greater_frequency.cpp)
add_executable(evaluate_expression evaluate_expression.cpp)
add_executable(reverse_stack_using_recursion reverse_stack_using_recursion.cpp)
add_executable(delete_middle_element delete_middle_element.cpp)
add_executable(sort_stack_method_1 sort_stack_method_1.cpp)
add_executable(two_stacks_in_array two_stacks_in_array.cpp)
add_executable(largest_rectangle_histogram largest_rectangle_histogram.cpp)
add_executable(maximum_size_rectangle maximum_size_rectangle.cpp)
add_executable(reverse_each_word reverse_each_word.cpp)
add_executable(the_celebrity_problem the_celebrity_problem.cpp)
add_executable(check_pairwise_consecutive check_pairwise_consecutive.cpp)
add_executable(next_smaller_element next_smaller_element.cpp)
add_executable(max_diff_left_right_smaller_element max_diff_left_right_smaller_element.cpp)
add_executable(decode_string_recursively decode_string_recursively.cpp)
add_executable(check_balanced_brackets check_balanced_brackets.cpp)
add_executable(main main.cpp)